force-app/main/default/objects/VoiceCall/fields/Callback_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Callback_Cancelled__c</fullName>
    <description>Formula field to display callback status if cancelled</description>
    <formula>IF(ISPICKVAL(RS_Callback_Status__c, &apos;Cancelled&apos;)  , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Callback Status Cancelled</inlineHelpText>
    <label>Callback Cancelled</label>
    <type>Checkbox</type>
</CustomField>