force-app/main/default/objects/VoiceCall/fields/Customer_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment_Score__c</fullName>
    <label>Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>