force-app/main/default/objects/VoiceCall/fields/Existing_Case_Found__c.field-meta.xml
<CustomField>
    <fullName>Existing_Case_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Case Found</label>
    <type>Checkbox</type>
</CustomField>