force-app/main/default/objects/VoiceCall/fields/IVRInput__c.field-meta.xml
<CustomField>
    <fullName>IVRInput__c</fullName>
    <label>Existing Case Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>