force-app/main/default/objects/VoiceCall/fields/IVRIntent__c.field-meta.xml
<CustomField>
    <fullName>IVRIntent__c</fullName>
    <label>Issue Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>