force-app/main/default/objects/VoiceCall/fields/IVRType__c.field-meta.xml
<CustomField>
    <fullName>IVRType__c</fullName>
    <label>Customer call reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>