force-app/main/default/objects/VoiceCall/fields/messagingsessionId__c.field-meta.xml
<CustomField>
    <fullName>messagingsessionId__c</fullName>
    <label>messagingsessionId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>