force-app/main/default/objects/VoiceCall/fields/Reason_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_cancellation__c</fullName>
    <label>Reason for cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>