force-app/main/default/objects/VoiceCall/fields/Reason_for_rescheduling_callback__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_rescheduling_callback__c</fullName>
    <description>Reason</description>
    <label>Reason for rescheduling callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>