force-app/main/default/objects/VoiceCall/fields/RS_Alternative_Connect_Requested__c.field-meta.xml
<CustomField>
    <fullName>RS_Alternative_Connect_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Connect Requested</label>
    <type>Checkbox</type>
</CustomField>