force-app/main/default/objects/VoiceCall/fields/RS_Alternative_Number__c.field-meta.xml
<CustomField>
    <fullName>RS_Alternative_Number__c</fullName>
    <label>Alternative Number</label>
    <type>Phone</type>
</CustomField>