force-app/main/default/objects/VoiceCall/fields/RS_Appointment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>RS_Appointment_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointment Scheduled</label>
    <type>Checkbox</type>
</CustomField>