force-app/main/default/objects/VoiceCall/fields/RS_Callback_Details_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>RS_Callback_Details_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Callback Details Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>