force-app/main/default/objects/VoiceCall/fields/RS_Callback_Status__c.field-meta.xml
<CustomField>
    <fullName>RS_Callback_Status__c</fullName>
    <label>Callback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>RequestedViaCaip</fullName>
                <label>Requested via CAIP</label>
            </value>
            <value>
                <fullName>ExtraInboundCall</fullName>
                <isActive>false</isActive>
                <label>ExtraInboundCall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>