force-app/main/default/objects/VoiceCall/fields/RS_Callback_Voicecall_ID__c.field-meta.xml
<CustomField>
    <fullName>RS_Callback_Voicecall_ID__c</fullName>
    <label>Callback Voicecall ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>