force-app/main/default/objects/VoiceCall/fields/RS_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>RS_Contact_Name__c</fullName>
    <formula>Related_Account__r.LastName  &amp;&apos; &apos;  &amp;   Related_Account__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>