force-app/main/default/objects/VoiceCall/fields/RS_ContactId__c.field-meta.xml
<CustomField>
    <fullName>RS_ContactId__c</fullName>
    <label>ContactId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>