force-app/main/default/objects/VoiceCall/fields/RS_Customer_Identified__c.field-meta.xml
<CustomField>
    <fullName>RS_Customer_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Identified</label>
    <type>Checkbox</type>
</CustomField>