force-app/main/default/objects/VoiceCall/fields/RS_Customer_Issue_Subject__c.field-meta.xml
<CustomField>
    <fullName>RS_Customer_Issue_Subject__c</fullName>
    <label>Customer Issue Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>