force-app/main/default/objects/VoiceCall/fields/RS_CustomerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>RS_CustomerAccountNumber__c</fullName>
    <label>Social Security Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>