force-app/main/default/objects/VoiceCall/fields/RS_CustomerVerified__c.field-meta.xml
<CustomField>
    <fullName>RS_CustomerVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Verified</label>
    <type>Checkbox</type>
</CustomField>