force-app/main/default/objects/VoiceCall/fields/RS_DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>RS_DateOfBirth__c</fullName>
    <label>DateOfBirth</label>
    <type>Date</type>
</CustomField>