force-app/main/default/objects/VoiceCall/fields/RS_Existing_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>RS_Existing_Case_Number__c</fullName>
    <label>Case Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>