force-app/main/default/objects/VoiceCall/fields/RS_ID__c.field-meta.xml
<CustomField>
    <fullName>RS_ID__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RS ID</label>
    <type>Text</type>
</CustomField>