force-app/main/default/objects/VoiceCall/fields/RS_IVRIntent__c.field-meta.xml
<CustomField>
    <fullName>RS_IVRIntent__c</fullName>
    <label>Issue Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>