force-app/main/default/objects/VoiceCall/fields/RS_ObjectFormula__c.field-meta.xml
<CustomField>
    <fullName>RS_ObjectFormula__c</fullName>
    <formula>if( Update_Case_Id__c&lt;&gt;&apos;&apos;,&quot;/&quot; +  Update_Case_Id__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ObjectFormula</label>
    <type>Text</type>
</CustomField>