force-app/main/default/objects/VoiceCall/fields/RS_Preferred_Callback_Time__c.field-meta.xml
<CustomField>
    <fullName>RS_Preferred_Callback_Time__c</fullName>
    <label>Preferred Callback Time</label>
    <type>DateTime</type>
</CustomField>