force-app/main/default/objects/VoiceCall/fields/RS_Previous_Call__c.field-meta.xml
<CustomField>
    <fullName>RS_Previous_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>