force-app/main/default/objects/VoiceCall/fields/RS_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>RS_Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RS_Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Voice Calls (Related Account)</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>