force-app/main/default/objects/VoiceCall/fields/RS_Severity__c.field-meta.xml
<CustomField>
    <fullName>RS_Severity__c</fullName>
    <label>Severity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>