force-app/main/default/objects/VoiceCall/fields/RS_SMS_Alternative_Number__c.field-meta.xml
<CustomField>
    <fullName>RS_SMS_Alternative_Number__c</fullName>
    <label>SMS Alternative Number</label>
    <type>Phone</type>
</CustomField>