force-app/main/default/objects/VoiceCall/fields/RS_Switch_To_SMS__c.field-meta.xml
<CustomField>
    <fullName>RS_Switch_To_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be enabled if customer has switched from IVR to SMS.</description>
    <label>Switch To SMS</label>
    <type>Checkbox</type>
</CustomField>