force-app/main/default/objects/VoiceCall/fields/RS_Switching_Requested_Time__c.field-meta.xml
<CustomField>
    <fullName>RS_Switching_Requested_Time__c</fullName>
    <label>Switching Requested Time</label>
    <type>DateTime</type>
</CustomField>