force-app/main/default/objects/VoiceCall/fields/RS_Unanswered_Outbound_Call__c.field-meta.xml
<CustomField>
    <fullName>RS_Unanswered_Outbound_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is checked if the customer fails to answer the callback call made by agent.</inlineHelpText>
    <label>Unanswered Outbound Call</label>
    <type>Checkbox</type>
</CustomField>