force-app/main/default/objects/VoiceCall/fields/RS_Update_Identifier__c.field-meta.xml
<CustomField>
    <fullName>RS_Update_Identifier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify if the voice call is updated from aws instance</description>
    <label>Update Identifier</label>
    <type>Checkbox</type>
</CustomField>