force-app/main/default/objects/VoiceCall/fields/SMS__c.field-meta.xml
<CustomField>
    <fullName>SMS__c</fullName>
    <label>Switch To SMS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>