force-app/main/default/objects/VoiceCall/fields/Sub_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Issue_Type__c</fullName>
    <label>Sub Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>