force-app/main/default/objects/VoiceCall/fields/Update_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Update_Case_Id__c</fullName>
    <label>Update Case Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>