force-app/main/default/objects/VoiceCall/validationRules/Preferred_Date_Time_Logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Preferred_Date_Time_Logic</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR($Profile.Name=&apos;Read Only Agent&apos;,$Profile.Name=&apos;Read Only Supervisor&apos;), !ISPICKVAL(RS_Callback_Status__c, &quot;Completed&quot;),
NOT(ISNEW()),ISCHANGED(RS_Preferred_Callback_Time__c),
RS_Preferred_Callback_Time__c &lt; Now())</errorConditionFormula>
    <errorDisplayField>RS_Preferred_Callback_Time__c</errorDisplayField>
    <errorMessage>Preferred date time should be a future date time.</errorMessage>
</ValidationRule>