force-app/main/default/objects/VoiceCall/validationRules/Reason_for_rescheduling_callback_logic.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_rescheduling_callback_logic</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(IF(ISNEW(),FALSE,(IF((ISPICKVAL(RS_Callback_Status__c ,&apos;Cancelled&apos;) &amp;&amp; ISCHANGED(RS_Callback_Status__c)),ISBLANK( Reason_for_cancellation__c), FALSE))),AND(NOT(ISNEW()),ISBLANK( Reason_for_cancellation__c),ISPICKVAL( RS_Callback_Status__c,&apos;Cancelled&apos;))),OR($Profile.Name=&apos;Read Only Agent&apos;,$Profile.Name=&apos;	Read Only Supervisor&apos;))</errorConditionFormula>
    <errorMessage>Please provide the reason for cancelation.</errorMessage>
</ValidationRule>